crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__constructor__arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/arguments.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅
      (method init [(local this @0) (local a @1) (local b @2)] []
         (block
            (print "init")
            (expr (= (setattr (local this @0) a) (local a @1)))
            (expr (= (setattr (local this @0) b) (local b @2)))
            (init-return))))
   (var foo (global @2) (call +2 (global Foo @1) 1.0 2.0))
   (print (attr (global foo @2) a))
   (print (attr (global foo @2) b)))

----- stderr -----
