crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__constructor__call_init_explicitly.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/call_init_explicitly.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅
      (method init [(local this @0) (local arg @1)] []
         (block
            (print (+ (+ "Foo.init(" (local arg @1)) ")"))
            (expr (= (setattr (local this @0) field) "init"))
            (init-return))))
   (var foo (global @4) (call +4 (global Foo @3) "one"))
   (expr (= (setattr (global foo @4) field) "field"))
   (var foo2 (global @5) (call +5 (attr (global foo @4) init) "two"))
   (print (global foo2 @5))
   (print (attr (global foo @4) field)))

----- stderr -----
