crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__constructor__default_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/default_arguments.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅)
   (var foo (global @4) (call +4 (global Foo @3) 1.0 2.0 3.0)))

----- stderr -----
