crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__constructor__early_return.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/early_return.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅
      (method init [(local this @0)] []
         (block
            (print "init")
            (init-return)
            (print "nope")
            (init-return))))
   (var foo (global @4) (call +4 (global Foo @3)))
   (print (global foo @4)))

----- stderr -----
