crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__constructor__missing_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/missing_arguments.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅
      (method init [(local this @0) (local a @1) (local b @2)] []
         (block
            (init-return))))
   (var foo (global @4) (call +4 (global Foo @3) 1.0)))

----- stderr -----
